# switchboard-plug-tablet

./: README.md  meson.build
data/: github.alecaddd.switchboard.tablet.appdata.xml.in  github.alecaddd.switchboard.tablet.gresource.xml  io.elementary.switchboard.mouse-touchpad.appdata.xml.in  io.elementary.switchboard.mouse-touchpad.gresource.xml  meson.build
debian/: changelog  control
src/: Plug.vala  meson.build
src/Backend/: GeneralSettings.vala  MouseSettings.vala  PenSettings.vala  RingerSettings.vala  TouchpadSettings.vala
src/Views/: General.vala  Mouse.vala  Pen.vala  Ringer.vala  Touchpad.vala
